# tee-osar

./: CMakeLists.txt  Makefile
bsw_aes/: Android.mk  CMakeLists.txt
bsw_aes/host/: Makefile  main.c
bsw_aes/ta/: Android.mk  Makefile  ta_entry.c  user_ta_header_defines.h
bsw_aes/ta/include/: ta_aes.h
bsw_csm/: Android.mk  CMakeLists.txt
bsw_csm/host/: Makefile
bsw_csm/host/src/: bsw_csm_utils.c  bsw_csm_utils.h  ca_bsw_csm.c
bsw_csm/host/test/: main.c  test_bsw_csm_data.h
bsw_csm/include/: ca_bsw_csm.h
bsw_csm/ta/: Android.mk  Makefile  crypt_taf.c  sub.mk  ta_entry.c  user_ta_header_defines.h
bsw_csm/ta/include/: crypt_taf.h  ta_csm.h
bsw_storage/: Android.mk  CMakeLists.txt
bsw_storage/host/: Makefile
bsw_storage/host/src/: ca_bsw_storage.c
bsw_storage/host/test/: main.c
bsw_storage/include/: ca_bsw_storage.h
bsw_storage/ta/: Android.mk  Makefile  ta_entry.c  user_ta_header_defines.h
bsw_storage/ta/include/: ta_storage.h
